# ecommerce

./: Makefile  pyproject.toml
ecommerce/: __init__.py  main_discount_cli.py
ecommerce/modules/: __init__.py
ecommerce/modules/cart/: __init__.py
ecommerce/modules/cart/application/use_cases/: create_fixed_discount.py
ecommerce/modules/cart/domain/entities/: __init__.py  cart.py  cart_item.py  discount.py
ecommerce/modules/cart/domain/repositories/: __init__.py  discount_repository.py
ecommerce/modules/cart/domain/services/: __init__.py  discount_service.py
ecommerce/modules/cart/domain/value_objects/: __init__.py  money.py
ecommerce/modules/cart/infrastructure/db/models/: base.py  discount_model.py
ecommerce/modules/cart/infrastructure/db/repositories/: memory_discount_repository.py  sql_discount_repository.py
ecommerce/modules/cart/interfaces/cli/: discount_cli.py
tests/: test_example.py
tests/modules/cart/domain/entities/: test_discount.py
